<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tutorial_background">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/post_share_fragment_title"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/shareableLinkContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="@dimen/margin_large">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/shareableLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="versu.com/p/lkdjlkjdkljkdjadadlkfdjlfdfdfskjdlkfjjk"
                android:textColor="@android:color/white"
                android:textIsSelectable="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/generateNewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/shareableLinkContent"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/generate_new_link_button" />

        <Button
            android:id="@+id/removeLinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/generateNewBtn"
            android:layout_alignParentRight="true"
            android:text="@string/remove_link_button" />

    </RelativeLayout>


</RelativeLayout>